--- a/index.html
+++ b/index.html
@@ -65,6 +65,54 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <form class="modal-form" name="modal-form" autocomplete="off">
+          <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
+          <div class="register-group" role="group">
+          <label class="modal-form-group">
+            <span class="modal-form-label">Имя</span>
+            <input class="modal-form-input" type="text" name="user-name" minlength="3"/>
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#person"></use>
+            </svg>
+          </label>
+
+      <label class="modal-form-group">
+        <span class="modal-form-label">Телефон</span>
+        <input class="modal-form-input" type="text" name="user-phone" autofocus required />
+        <svg class="modal-icon" width="18" height="18">
+          <use href="./images/icons.svg#phone"></use>
+        </svg>
+      </label>
+
+      <label class="modal-form-group">
+        <span class="modal-form-label">Почта</span>
+        <input class="modal-form-input" type="text" name="user-mail" required />
+        <svg class="modal-icon" width="18" height="18">
+          <use href="./images/icons.svg#email"></use>
+        </svg>
+      </label>
+
+      <label class="modal-form-group">
+        <span class="modal-form-label">Комментарий</span>
+        <textarea class="user-comment" name="user-comment" rows="5" placeholder="Введите текст"></textarea>
+      </label>
+    </div>
+    <label class="agreement-form-group">
+     <input class="agreement-check visully-hidden" type="checkbox" name="user-agreement">
+     <svg class="agreement-icon" width="16" height="15">
+      <use class="agreement-icon-check" href="./images/icons.svg#check"></use>
+    </svg>
+     <span class="agreement-text">
+      Соглашаюсь с рассылкой и принимаю
+      <a href="" class="agreement-link" target="_blank" rel="noopener noreferrer">
+        Условия договора
+      </a>
+     </span>
+    </label>
+
+    <button type="submit" class="basic-bth">Отправить</button>
+  
+        </form>
         </div>
       </div>
     </div>
