--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
      </span>
     </label>
 
-    <button type="submit" class="basic-bth">Отправить</button>
+    <button type="submit" class="basic-bth-link">Отправить</button>
   
         </form>
         </div>
@@ -631,6 +631,22 @@
           </li>
         </ul>
       </div>
+    
+
+    <div class="footer-subscription">
+      <h2 class="footer-slogan">Подпишитесь на рассылку</h2>
+      <form name="footer-form" class="footer-form">
+      <div class="footer-form-group"> <input class="footer-user-name"
+        placeholder="E-mail"/>
+        <button class="footer-basic-bth" type="submit">Подписаться
+          <svg class="send-icon" width="24" height="24">
+            <use href="./images/icons.svg#send"></use>
+          </svg>
+        </button>
+
+      </div>
+      </form>
+    </div>
     </div>
     </footer>
     <script src="./js/modal.js"></script>
