--- a/portfolio.html
+++ b/portfolio.html
@@ -260,22 +260,26 @@
               </use>
             </svg>
           </a>
-          </li>
-          <li>
-            <a class="footer-social-link" 
-            href=""
-            target="_blank"
-            rel="noopener noreferrer"
-            aria-label="Иконка linkedin">
-            <svg class="socials-icon" width="20" height="20">
-              <use href="./images/icons.svg#linkedins">
-              </use>
-            </svg>
-          </a>
-          </li>
-        </ul>
-      </div>
+        </li>
+      </ul>
     </div>
-    </footer>
+  
+
+  <div class="footer-subscription">
+    <h2 class="footer-slogan">Подпишитесь на рассылку</h2>
+    <form name="footer-form" class="footer-form">
+    <div class="footer-form-group"> <input class="footer-user-name"
+      placeholder="E-mail"/>
+      <button class="footer-basic-bth" type="submit">Подписаться
+        <svg class="send-icon" width="24" height="24">
+          <use href="./images/icons.svg#send"></use>
+        </svg>
+      </button>
+
+    </div>
+    </form>
+  </div>
+  </div>
+  </footer>
   </body>
 </html>
