--- a/portfolio.html
+++ b/portfolio.html
@@ -265,21 +265,21 @@
     </div>
   
 
-  <div class="footer-subscription">
-    <h2 class="footer-slogan">Подпишитесь на рассылку</h2>
-    <form name="footer-form" class="footer-form">
-    <div class="footer-form-group"> <input class="footer-user-name"
-      placeholder="E-mail"/>
-      <button class="footer-basic-bth" type="submit">Подписаться
-        <svg class="send-icon" width="24" height="24">
-          <use href="./images/icons.svg#send"></use>
-        </svg>
-      </button>
-
+    <div class="footer-subscription">
+      <h2 class="footer-slogan">Подпишитесь на рассылку</h2>
+      <form name="footer-form" class="footer-form">
+      <input class="footer-user-name"
+        placeholder="E-mail"/>
+        <button class="footer-basic-bth" type="submit">Подписаться
+          <svg class="send-icon" width="24" height="24">
+            <use href="./images/icons.svg#send"></use>
+          </svg>
+        </button>
+  
+     
+      </form>
     </div>
-    </form>
-  </div>
-  </div>
+    </div>
   </footer>
   </body>
 </html>
